After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 66842 - 77.18 - Highlight range does not take sheet into account
77.18 - Highlight range does not take sheet into account
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
git master
Other other
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2001-12-13 00:52 UTC by Chema Celorio
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Chema Celorio 2001-12-13 00:52:50 UTC
0. Add another sheet to the workbook (sheet2)
1. B5=sum(Sheet2!B3:B7)
2. Hit enter, go to B5 and hit F2

the range is highlighted in red, even thought it is in Sheet2
Comment 1 Jody Goldberg 2001-12-25 21:58:07 UTC
This is a user error.
B7 is hightlighted, not Sheet2!B5
Comment 2 Andreas J. Guelzow 2001-12-26 18:29:38 UTC
I used to be able to repeat this problem but the described situation
now appears to be fixed. Nevertheless slightly different version still
occurs:


0. Open gnumeric and add another sheet to the workbook (Sheet2)
1. On Sheet1 click on B5 and enter (by typing) =sum(Sheet2!B3:B7)

Stop when you have typed the closing parenthesis. Now a red box is
around B3:B7 on Sheet1. Why?

2. Type Enter
3. Click on Sheet1:B5, click behind the closing parenthesis.

Now a red box is around B3:B7 on Sheet1. Why?


Comment 3 Andreas J. Guelzow 2001-12-26 18:30:05 UTC
cc to me
Comment 4 Jody Goldberg 2001-12-26 22:07:41 UTC
Ahh I see.  Ok, I'll commit a patch shortly.